--- a/index.html
+++ b/index.html
@@ -580,11 +580,11 @@
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="card h-100">
                             <div class="card-img">
-                                <img src="assets/img/Postes.JPG" alt="" class="img-fluid">
+                                <img src="assets/img/retro.jpeg" alt="" class="img-fluid">
                             </div>
-                            <h3><a href="#" class="stretched-link">Olancho</a></h3>
+                            <h3><a href="#" class="stretched-link">Catamas, Olancho</a></h3>
                             <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
-                            <p>Catacamos, Olancho</p>
+                            <p>Cobertura, Region Sur</p>
                         </div>
                     </div>
                     <!-- End Card Item -->
@@ -592,11 +592,11 @@
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="card h-100">
                             <div class="card-img">
-                                <img src="assets/img/hotels-2.jpg" alt="" class="img-fluid">
+                                <img src="assets/img/1.png" alt="" class="img-fluid">
                             </div>
-                            <h3><a href="#" class="stretched-link">Aspernatur assumenda</a></h3>
+                            <h3><a href="#" class="stretched-link">Santa Rosa de Copàn</a></h3>
                             <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
-                            <p>0.5 Mile from the Venue</p>
+                            <p>Cobertura Región Occidente</p>
                         </div>
                     </div>
                     <!-- End Card Item -->
@@ -604,11 +604,11 @@
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card h-100">
                             <div class="card-img">
-                                <img src="assets/img/hotels-3.jpg" alt="" class="img-fluid">
+                                <img src="assets/img/13.png" alt="" class="img-fluid">
                             </div>
-                            <h3><a href="#" class="stretched-link">Dolores ut ut voluptatibu</a></h3>
+                            <h3><a href="#" class="stretched-link">San pedro Sula, Cortes</a></h3>
                             <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
-                            <p>0.6 Mile from the Venue</p>
+                            <p>Cobertura Regiòn Norte</p>
                         </div>
                     </div>
                     <!-- End Card Item -->
@@ -625,8 +625,9 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Gallery</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <h2>Proyectos</h2>
+                <p>En SEATEC Servicios Eléctricos, cada proyecto representa nuestro compromiso con la calidad, la seguridad y la eficiencia. Desde instalaciones industriales hasta soluciones residenciales, nuestra galería muestra la dedicación y el profesionalismo
+                    que nos caracteriza. Descubre cómo transformamos espacios con energía confiable.</p>
             </div>
             <!-- End Section Title -->
 
@@ -665,16 +666,16 @@
                     </script>
                     <div class="swiper-wrapper align-items-center">
                         <div class="swiper-slide">
-                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-1.jpg"><img src="assets/img/event-gallery/event-gallery-1.jpg" class="img-fluid" alt=""></a>
+                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-1.png"><img src="assets/img/event-gallery/event-gallery-1.png" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
                             <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-2.jpg"><img src="assets/img/event-gallery/event-gallery-2.jpg" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
-                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-3.jpg"><img src="assets/img/event-gallery/event-gallery-3.jpg" class="img-fluid" alt=""></a>
+                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-3.png"><img src="assets/img/event-gallery/event-gallery-3.png" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
-                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-4.jpg"><img src="assets/img/event-gallery/event-gallery-4.jpg" class="img-fluid" alt=""></a>
+                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-4.png"><img src="assets/img/event-gallery/event-gallery-4.png" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
                             <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-5.jpg"><img src="assets/img/event-gallery/event-gallery-5.jpg" class="img-fluid" alt=""></a>
@@ -683,7 +684,7 @@
                             <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-6.jpg"><img src="assets/img/event-gallery/event-gallery-6.jpg" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
-                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-7.jpg"><img src="assets/img/event-gallery/event-gallery-7.jpg" class="img-fluid" alt=""></a>
+                            <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-7.jpeg"><img src="assets/img/event-gallery/event-gallery-7.jpeg" class="img-fluid" alt=""></a>
                         </div>
                         <div class="swiper-slide">
                             <a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-8.jpg"><img src="assets/img/event-gallery/event-gallery-8.jpg" class="img-fluid" alt=""></a>
@@ -702,8 +703,8 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Sponsors</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <h2>En SEATEC, cada proyecto habla por sí mismo.</h2>
+                <p>Empresas y organizaciones han depositado su confianza en SEATEC para llevar a cabo soluciones eléctricas eficientes, seguras y de alto rendimiento. Cada colaboración representa nuestro compromiso con la excelencia.</p>
             </div>
             <!-- End Section Title -->
 
@@ -712,42 +713,42 @@
                 <div class="row g-0 clients-wrap">
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso1.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso2.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso3.jpeg" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso1.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso2.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso3.jpeg" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso1.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
                     <div class="col-xl-3 col-md-4 client-logo">
-                        <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+                        <img src="assets/img/caso2.png" class="img-fluid" alt="">
                     </div>
                     <!-- End Client Item -->
 
@@ -763,8 +764,9 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Frequently Asked Questions</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <h2>Información Clave para Nuestros Clientes</h2>
+                <p> Preguntas Frecuentes</p>
+                <p>Ponemos a tu disposición información clara y precisa sobre nuestros servicios eléctricos, procesos de trabajo y soluciones personalizadas.</p>
             </div>
             <!-- End Section Title -->
 
@@ -777,58 +779,55 @@
                         <div class="faq-container">
 
                             <div class="faq-item faq-active">
-                                <h3>Non consectetur a erat nam at lectus urna duis?</h3>
+                                <h3>¿Qué tipos de servicios eléctricos ofrece SEATEC?</h3>
                                 <div class="faq-content">
-                                    <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+                                    <p>Brindamos soluciones eléctricas integrales, incluyendo instalaciones residenciales, comerciales e industriales, mantenimiento preventivo y correctivo, automatización, iluminación, cableado estructurado y más.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
                             <!-- End Faq item-->
 
                             <div class="faq-item">
-                                <h3>Feugiat scelerisque varius morbi enim nunc faucibus?</h3>
+                                <h3>¿Cómo solicito una cotización?</h3>
                                 <div class="faq-content">
-                                    <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper
-                                        dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                                    <p>Puedes contactarnos a través de nuestro formulario web, correo electrónico o teléfono. Nuestro equipo evaluará tus necesidades y te enviará una propuesta personalizada sin compromiso.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
                             <!-- End Faq item-->
 
                             <div class="faq-item">
-                                <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
+                                <h3>¿Están certificados y cumplen con normativas?</h3>
                                 <div class="faq-content">
-                                    <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna
-                                        duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+                                    <p>Sí. Nuestro personal cuenta con certificaciones vigentes y trabajamos conforme a las normativas eléctricas nacionales, garantizando seguridad, legalidad y calidad en cada proyecto.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
                             <!-- End Faq item-->
 
                             <div class="faq-item">
-                                <h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
+                                <h3>¿Realizan trabajos urgentes o de emergencia?</h3>
                                 <div class="faq-content">
-                                    <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper
-                                        dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                                    <p>Contamos con atención para emergencias eléctricas. Nuestro equipo está disponible para responder rápidamente ante fallas críticas o situaciones de riesgo.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
                             <!-- End Faq item-->
 
                             <div class="faq-item">
-                                <h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
+                                <h3>¿Realizan mantenimiento eléctrico programado?</h3>
                                 <div class="faq-content">
-                                    <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis
-                                        blandit turpis cursus in</p>
+                                    <p>Sí. Ofrecemos planes de mantenimiento preventivo y correctivo para instalaciones eléctricas residenciales, comerciales e industriales. Esto permite anticipar fallas, extender la vida útil de los equipos y garantizar
+                                        la seguridad operativa.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
                             <!-- End Faq item-->
 
                             <div class="faq-item">
-                                <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
+                                <h3>¿Cuánto tiempo toma un trabajo eléctrico típico?</h3>
                                 <div class="faq-content">
-                                    <p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis et consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.</p>
+                                    <p>El tiempo varía según la complejidad del proyecto. Una instalación básica puede completarse en pocas horas, mientras que proyectos industriales requieren planificación y ejecución por etapas.</p>
                                 </div>
                                 <i class="faq-toggle bi bi-chevron-right"></i>
                             </div>
