--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@
                 <div class="container position-relative" data-aos="fade-up">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h2>Sobre nosotros</h2>
-                            <p>SEATEC es una empresa especializada en brindar soluciones eléctricas integrales, orientada a satisfacer las necesidades de hogares, comercios e industrias. Nos destacamos por ofrecer servicios de instalación, mantenimiento
-                                y reparación de sistemas eléctricos, trabajando siempre bajo altos estándares de seguridad y calidad.</p>
+                            <h2>SEATEC</h2>
+                            <p>Somos una empresa especializada en brindar soluciones eléctricas integrales, orientada a satisfacer las necesidades de hogares, comercios e industrias. Nos destacamos por ofrecer servicios de instalación, mantenimiento y reparación
+                                de sistemas eléctricos, trabajando siempre bajo altos estándares de seguridad y calidad.</p>
                         </div>
                         <div class="col-lg-3">
                             <h3>Donde</h3>
-                            <p>Santa Rosa de Copan</p>
+                            <p>Santa Rosa de Copán, Honduras</p>
                         </div>
                         <div class="col-lg-3">
-                            <h3>Contacto</h3>
-                            <p>+504 99700174</p>
+
                         </div>
                     </div>
                 </div>
@@ -124,9 +123,9 @@
                                     <span>Instalaciones seguras y de alta calidad</span>
                                 </div>
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=100057194960712"><i class="bi bi-twitter-x"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=100057194960712"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.instagram.com/seatec_504/"><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
@@ -850,8 +849,8 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Buy Tickets<br></h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <h2>Solicita Tu Servicio Eléctrico<br></h2>
+                <p>Atención profesional para instalaciones, reparaciones y proyectos eléctricos.</p>
             </div>
             <!-- End Section Title -->
 
@@ -859,60 +858,61 @@
 
                 <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h3>Standard Access</h3>
+                        <h3>Instalaciones Eléctricas</h3>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h4><sup>$</sup>150<span> / month</span></h4>
+                        <h4><sup>¿Necesitas una instalación completa o parcial?</sup><span></span></h4>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
                         <ul>
-                            <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                            <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                            <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
+                            <li><i class="bi bi-check"></i> <span>Residencial, comercial e industrial</span></li>
+                            <li><i class="bi bi-check"></i> <span>Cableado, tableros, tomas, iluminación y más</span></li>
+                            <li><i class="bi bi-check"></i> <span>Cumplimiento de normativas y seguridad</span></li>
+
                         </ul>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+                        <div class="text-center"><a href="#" class="buy-btn">Solicita una Cotización</a></div>
                     </div>
                 </div>
                 <!-- End Pricing Item -->
 
                 <div class="row gy-4 pricing-item featured mt-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h3>Premium Access<br></h3>
+                        <h3>Reparaciones y Soluciones<br></h3>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h4><sup>$</sup>250<span> / month</span></h4>
+                        <h4><sup></sup><span>Solucionamos fallas eléctricas con rapidez y seguridad</span></h4>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
                         <ul>
-                            <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                            <li><i class="bi bi-check"></i> <strong>Nec feugiat nisl pretium</strong></li>
-                            <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+                            <li><i class="bi bi-check"></i> <span>Cortocircuitos, apagones, y sobrecargas</span></li>
+                            <li><i class="bi bi-check"></i> <strong>Reemplazo de breakers, tomacorrientes y luminarias</strong></li>
+                            <li><i class="bi bi-check"></i> <span>Diagnóstico técnico en sitio</span></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+                        <div class="text-center"><a href="#" class="buy-btn">Agendar Visita Técnica</a></div>
                     </div>
                 </div>
                 <!-- End Pricing Item -->
 
                 <div class="row gy-4 pricing-item mt-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h3>Pro Access<br></h3>
+                        <h3>Proyectos Personalizados<br></h3>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <h4><sup>$</sup>350<span> / month</span></h4>
+                        <h4><sup></sup><span>Cuéntanos tu necesidad, nosotros lo hacemos realidad</span></h4>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
                         <ul>
-                            <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                            <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                            <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+                            <li><i class="bi bi-check"></i> <span>Ampliaciones eléctricas</span></li>
+                            <li><i class="bi bi-check"></i> <span>Asesoría técnica y supervisión de obra</span></li>
+                            <li><i class="bi bi-check"></i> <span>Automatización y mejoras en eficiencia</span></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                        <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+                        <div class="text-center"><a href="#" class="buy-btn">Contáctanos</a></div>
                     </div>
                 </div>
                 <!-- End Pricing Item -->
@@ -927,8 +927,8 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Contact</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <h2>Contactanos</h2>
+                <p>¿Necesitas ayuda con una instalación eléctrica o tienes un proyecto en mente? Estamos listos para asesorarte y brindarte un servicio seguro, profesional y a tu medida.</p>
             </div>
             <!-- End Section Title -->
 
@@ -939,8 +939,8 @@
                     <div class="col-lg-6">
                         <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
                             <i class="bi bi-geo-alt"></i>
-                            <h3>Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <h3>Dirección</h3>
+                            <p>Col. Prado alto, Santa Rosa de Copán, Honduras</p>
                         </div>
                     </div>
                     <!-- End Info Item -->
@@ -948,8 +948,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
                             <i class="bi bi-telephone"></i>
-                            <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
+                            <h3>LLámanos</h3>
+                            <p>+504 9564-4908</p>
+                            <p>+504 9561-2966</p>
+                            <p>+504 9970-0174</p>
                         </div>
                     </div>
                     <!-- End Info Item -->
@@ -957,8 +959,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
                             <i class="bi bi-envelope"></i>
-                            <h3>Email Us</h3>
-                            <p>info@example.com</p>
+                            <h3>Correo Electrónico</h3>
+                            <p>seatec.sdr.l@gmail.com</p>
                         </div>
                     </div>
                     <!-- End Info Item -->
@@ -967,7 +969,7 @@
 
                 <div class="row gy-4 mt-1">
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1978442.7801732523!2d-88.15494050000001!3d14.418742700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x21dbc376061deed1%3A0xbc84241f9345178e!2sSEATEC!5e0!3m2!1ses-419!2shn!4v1757524678514!5m2!1ses-419!2shn"
                             frameborder="0" style="border:0; width: 100%; height: 400px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <!-- End Google Maps -->
@@ -977,19 +979,19 @@
                             <div class="row gy-4">
 
                                 <div class="col-md-6">
-                                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                                    <input type="text" name="name" class="form-control" placeholder="Nombre" required="">
                                 </div>
 
                                 <div class="col-md-6 ">
-                                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                                    <input type="email" class="form-control" name="email" placeholder="Correo Electrónico" required="">
                                 </div>
 
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                                    <input type="text" class="form-control" name="subject" placeholder="Número telefonico" required="">
                                 </div>
 
                                 <div class="col-md-12">
-                                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                                    <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
                                 </div>
 
                                 <div class="col-md-12 text-center">
@@ -997,7 +999,7 @@
                                     <div class="error-message"></div>
                                     <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                                    <button type="submit">Send Message</button>
+                                    <button type="submit">Enviar Mensaje</button>
                                 </div>
 
                             </div>
@@ -1025,53 +1027,53 @@
                         </a>
                         <div class="footer-contact pt-3">
                             <p>Col. Prado Alto Santa Rosa de Copán, Honduras</p>
-                            <p>+504 99700174</p>
-                            <p class="mt-3"><strong>Phone:</strong> <span>+504 95644908 +504 95612966</span></p>
-                            <p><strong>Email:</strong> <span>seatec@gmail.com</span></p>
+                            <p class="mt-3"><strong>Phone:</strong> <span>+504 95644908 +504 95612966</span> +504 99700174<span></span></p>
+                            <p><strong>Email:</strong> <span>seatec.sdr.l@gmail.com</span></p>
                         </div>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>Enlaces utiles</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Acerca de nosotros</a></li>
+                            <li><a href="#">Servicios</a></li>
+                            <li><a href="#">Terminos de servicio</a></li>
+                            <li><a href="#">Politicas de privacidad</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Our Services</h4>
+                        <h4>Servicios</h4>
                         <ul>
-                            <li><a href="#">Web Design</a></li>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">Product Management</a></li>
-                            <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Graphic Design</a></li>
+                            <li><a href="#">Instalaciones Eléctricas</a></li>
+                            <li><a href="#">Mantenimiento y Reparaciones</a></li>
+                            <li><a href="#">Alumbrado Residencial y Comercial</a></li>
+                            <li><a href="#">Proyectos Personalizados</a></li>
+                            <li><a href="#">Instalación de Cámaras de Vigilancia</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Hic solutasetp</h4>
+                        <h4>¿Por qué elegirnos?</h4>
                         <ul>
-                            <li><a href="#">Molestiae accusamus iure</a></li>
-                            <li><a href="#">Excepturi dignissimos</a></li>
-                            <li><a href="#">Suscipit distinctio</a></li>
-                            <li><a href="#">Dilecta</a></li>
-                            <li><a href="#">Sit quas consectetur</a></li>
+                            <li><a href="#">Atención rápida y personalizada</a></li>
+                            <li><a href="#">Técnicos calificados y con experiencia</a></li>
+                            <li><a href="#">Materiales de alta calidad</a></li>
+                            <li><a href="#">Soluciones seguras y a medida</a></li>
+                            <li><a href="#">Compromiso con cada cliente</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Nobis illum</h4>
+                        <h4>Nuestros Valores</h4>
                         <ul>
-                            <li><a href="#">Ipsam</a></li>
-                            <li><a href="#">Laudantium dolorum</a></li>
-                            <li><a href="#">Dinera</a></li>
-                            <li><a href="#">Trodelas</a></li>
-                            <li><a href="#">Flexo</a></li>
+                            <li><a href="#">Profesionalismo: Trabajo serio y comprometido en cada proyecto.</a></li>
+                            <li><a href="#">Confianza: Transparencia y honestidad con todos nuestros clientes.</a></li>
+                            <li><a href="#">Calidad: Solo utilizamos materiales y equipos de primera.</a></li>
+                            <li><a href="#">Seguridad: Cumplimos con todas las normativas y estándares eléctricos.</a></li>
+                            <li><a href="#">Innovación: Buscamos siempre las mejores soluciones para ti.</a></li>
+                            <li><a href="#">Atención Personalizada: Adaptamos nuestros servicios a tus necesidades específicas.</a></li>
                         </ul>
                     </div>
 
