--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <ul>
                     <li><a href="#hero" class="active">Inicio<br></a></li>
                     <li><a href="#speakers">Servicios</a></li>
+                    <li><a href="speaker-details.html">Sobre nosotros</a></li>
                     <li><a href="#contact">Contactános</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -73,7 +74,7 @@
                 <h2 data-aos="fade-up" data-aos-delay="100" class=""><br><span>SEATEC</span> </h2>
                 <p data-aos="fade-up" data-aos-delay="200">Servicios Electricos</p>
                 <div data-aos="fade-up" data-aos-delay="300" class="">
-                    <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
+                    <a href="https://www.youtube.com/watch?v=RvrZNaMlUfc" class="glightbox pulsating-play-btn mt-3"></a>
                 </div>
             </div>
 
