--- a/speaker-details.html
+++ b/speaker-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Speaker Details - TheEvent Bootstrap Template</title>
+    <title>Sobre nosotros</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -28,13 +28,7 @@
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: TheEvent
-  * Template URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="speaker-details-page">
@@ -50,35 +44,43 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="#hero">Inicio<br></a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#hotels">Hotels</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                    <li><a href="index.html">Inicio<br></a></li>
+                    <li><a href="speaker-details.html">Historia</a></li>
+                    <li><a href="speaker-details.html">Misión</a></li>
+                    <li><a href="speaker-details.html">Visión</a></li>
+                    <li>
+                        <a href="speaker-details.html">Nuestro equipo</a>
+                    </li>
+                    <li><a href=".">Galeria</a></li>
+                    <li class="dropdown"><a href="#"><span>Proyectos y servicios</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+
                         <ul>
-                            <li><a href="#">Dropdown 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                            <li><a href="#">Servicios </a></li>
+                            <li class="dropdown"><a href="#"><span>nos ajustamos a tus necesidades</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                                 <ul>
-                                    <li><a href="#">Deep Dropdown 1</a></li>
-                                    <li><a href="#">Deep Dropdown 2</a></li>
-                                    <li><a href="#">Deep Dropdown 3</a></li>
-                                    <li><a href="#">Deep Dropdown 4</a></li>
-                                    <li><a href="#">Deep Dropdown 5</a></li>
+                                    <li><a href="#">Instalaciones Eléctricas Residenciales</a></li>
+                                    <li><a href="#">Soluciones Comerciales e Industriales</a></li>
+                                    <li><a href="#">Proyectos Mecánicos Personalizados</a></li>
+                                    <li><a href="#">Sistemas de Vigilancia y Seguridad</a></li>
+                                    <li>
+                                        <a href="#"></a>
+                                    </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Dropdown 2</a></li>
-                            <li><a href="#">Dropdown 3</a></li>
-                            <li><a href="#">Dropdown 4</a></li>
+                            <li><a href="#">Renta de maquinaria</a></li>
+                            <li><a href="#">Mantenimiento</a></li>
+                            <li><a href="#">Instalación</a></li>
+                            <li><a href="#">Cotización</a></li>
                         </ul>
                     </li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li>
+                        <a href="#contact"></a>
+                    </li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Buy Tickets</a>
+            <a class="cta-btn d-none d-sm-block" href="index.html">Contactanos</a>
 
         </div>
     </header>
@@ -88,12 +90,14 @@
         <!-- Page Title -->
         <div class="page-title" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
             <div class="container position-relative">
-                <h1>Speaker Details</h1>
-                <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+                <h1>Conócenos</h1>
+                <p>En SEATEC somos una empresa dedicada a ofrecer servicios eléctricos confiables, seguros y personalizados. Nos especializamos en instalaciones eléctricas, mantenimiento, reparaciones y sistemas de vigilancia, trabajando tanto en entornos
+                    residenciales como comerciales. Nuestra prioridad es brindar un servicio de calidad, cumpliendo con todas las normativas técnicas y de seguridad. Nos enfocamos en entender las necesidades de cada cliente para ofrecer soluciones efectivas,
+                    duraderas y ajustadas a su presupuesto. Con una sólida experiencia en el rubro, nos destacamos por nuestra atención personalizada, responsabilidad y compromiso en cada proyecto.</p>
                 <nav class="breadcrumbs">
                     <ol>
-                        <li><a href="index.html">Home</a></li>
-                        <li class="current">Speaker Details</li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li class="current">Sobre Seatec</li>
                     </ol>
                 </nav>
             </div>
@@ -107,24 +111,30 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="assets/img/speaker.jpg" alt="Speaker" class="img-fluid">
+                        <img src="assets/img/Personal 2 .JPG" alt="Speaker" class="img-fluid">
                     </div>
 
                     <div class="col-md-6">
                         <div class="details">
-                            <h2>Brenden Legros</h2>
+                            <h2>Historia</h2>
                             <div class="social">
                                 <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
+                                <a href="https://www.facebook.com/people/Seatec/100057194960712/"><i class="bi bi-facebook"></i></a>
+                                <a href="https://www.instagram.com/seatec_504/"><i class="bi bi-instagram"></i></a>
                                 <a href=""><i class="bi bi-linkedin"></i></a>
                             </div>
-                            <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
-
-                            <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p>
-
-                            <p>Et dolore blanditiis officiis non quod id possimus. Optio non commodi alias sint culpa sapiente nihil ipsa magnam. Qui eum alias provident omnis incidunt aut. Eius et officia corrupti omnis error vel quia omnis velit. In qui
-                                debitis autem aperiam voluptates unde sunt et facilis.</p>
+                            <p>SEATEC es una empresa familiar fundada el 15 de julio de 2014 en Santa Rosa de Copán, Honduras, con el propósito de brindar soluciones eléctricas confiables, seguras y adaptadas a las necesidades de cada cliente. Desde sus
+                                inicios, la empresa ha sido liderada por la familia Deras, quienes han trabajado con compromiso y visión para posicionarse en el rubro eléctrico a nivel regional. La gestión operativa y administrativa está a cargo de Luis
+                                Deras y Jorge Deras, con la dirección general de Francisco Deras, quien ha guiado el crecimiento de la empresa con enfoque al cliente y altos estándares de calidad. El área técnica y de proyectos está bajo la supervisión
+                                del Ingeniero Allan Deras, responsable de garantizar que cada instalación cumpla con las normativas eléctricas y de seguridad vigentes. Gracias al esfuerzo constante y la confianza de sus clientes, la empresa ha crecido
+                                de manera sostenida, ampliando su presencia a nivel nacional. realizando proyectos industriales en la región, norte y otras zonas del país, ofreciendo servicios tanto residenciales como comerciales e industriales. Hoy,
+                                SEATEC continúa consolidándose como una empresa de confianza, comprometida con la calidad, la innovación y el servicio personalizado en cada proyecto. </p>
+                            <p>Misión</p>
+                            <p>Brindar servicios profesionales en las áreas eléctrica y mecánica, con altos estándares de calidad, seguridad y eficiencia. Nos comprometemos a ofrecer soluciones personalizadas que satisfagan las necesidades de nuestros clientes,
+                                trabajando con responsabilidad, experiencia y tecnología para contribuir al desarrollo de cada proyecto a nivel nacional.</p>
+                            <p>Visón</p>
+                            <p>Ser una empresa líder a nivel nacional en el sector eléctrico y mecánico, reconocida por su calidad, responsabilidad y compromiso con cada cliente. Aspiramos a seguir creciendo, innovando y brindando soluciones eficientes que
+                                contribuyan al desarrollo tecnológico y la seguridad de los hogares, comercios e industrias en Honduras.</p>
                         </div>
                     </div>
 
@@ -144,57 +154,58 @@
                 <div class="row gy-4">
                     <div class="col-lg-4 col-md-6 footer-about">
                         <a href="index.html" class="logo d-flex align-items-center">
-                            <span class="sitename">TheEvent</span>
+                            <span class="sitename">Contactanos</span>
                         </a>
                         <div class="footer-contact pt-3">
                             <p>Colonia Prado Alto</p>
-                            <p>Santa Rosa de Copán</p>
-                            <p class="mt-3"><strong>Phone:</strong> <span>+504 99700174</span></p>
-                            <p><strong>Email:</strong> <span>seatec@gmail.com</span></p>
+                            <p>Santa Rosa de Copán, Honduras</p>
+                            <p class="mt-3"><strong>Phone:</strong> <span>+504 95644908 +504 95612966  +504 99700174</span></p>
+                            <p><strong>Email:</strong> <span>seatec.sdr.l@gmail.com</span></p>
                         </div>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>Enlaces utiles</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Acerca de nosotros</a></li>
+                            <li><a href="#">Servicios</a></li>
+                            <li><a href="#">Terminos de servicio</a></li>
+                            <li><a href="#">Politicas de privacidad</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Our Services</h4>
+                        <h4>Servicios</h4>
                         <ul>
-                            <li><a href="#">Web Design</a></li>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">Product Management</a></li>
-                            <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Graphic Design</a></li>
+                            <li><a href="#">Instalaciones Eléctricas</a></li>
+                            <li><a href="#">Mantenimiento y Reparaciones</a></li>
+                            <li><a href="#">Alumbrado Residencial y Comercial</a></li>
+                            <li><a href="#">Proyectos Personalizados</a></li>
+                            <li><a href="#">Instalación de Cámaras de Vigilancia</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Hic solutasetp</h4>
+                        <h4>¿Por qué elegirnos?</h4>
                         <ul>
-                            <li><a href="#">Molestiae accusamus iure</a></li>
-                            <li><a href="#">Excepturi dignissimos</a></li>
-                            <li><a href="#">Suscipit distinctio</a></li>
-                            <li><a href="#">Dilecta</a></li>
-                            <li><a href="#">Sit quas consectetur</a></li>
+                            <li><a href="#">Atención rápida y personalizada</a></li>
+                            <li><a href="#">Técnicos calificados y con experiencia</a></li>
+                            <li><a href="#">Materiales de alta calidad</a></li>
+                            <li><a href="#">Soluciones seguras y a medida</a></li>
+                            <li><a href="#">Compromiso con cada cliente</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Nobis illum</h4>
+                        <h4>Nuestros Valores</h4>
                         <ul>
-                            <li><a href="#">Ipsam</a></li>
-                            <li><a href="#">Laudantium dolorum</a></li>
-                            <li><a href="#">Dinera</a></li>
-                            <li><a href="#">Trodelas</a></li>
-                            <li><a href="#">Flexo</a></li>
+                            <li><a href="#">Profesionalismo: Trabajo serio y comprometido en cada proyecto.</a></li>
+                            <li><a href="#">Confianza: Transparencia y honestidad con todos nuestros clientes.</a></li>
+                            <li><a href="#">Calidad: Solo utilizamos materiales y equipos de primera.</a></li>
+                            <li><a href="#">Seguridad: Cumplimos con todas las normativas y estándares eléctricos.</a></li>
+                            <li><a href="#">Innovación: Buscamos siempre las mejores soluciones para ti.</a></li>
+                            <li><a href="#">Atención Personalizada: Adaptamos nuestros servicios a tus necesidades específicas.</a></li>
                         </ul>
                     </div>
 
